client/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
     k8s-app: client-dep 
  replicas: 1
  template:
    metadata:
      labels:
        app: client
        k8s-app: client-dep
    spec:
      terminationGracePeriodSeconds: 2
      containers:
      - name: client
        image: ghcr.io/nicolaka/netshoot:v0.8
        command:
          - /bin/bash
          - -c
          # need this so the container exits normally
          - "trap : TERM INT; sleep infinity & wait"
