client/cnp-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-apiserver
spec:
  egress:
  - toEntities:
    - kube-apiserver
  endpointSelector:
    matchLabels: {}
