client/cnp-client-allow-fqdn-personal.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-client-to-service
spec:
  endpointSelector:
    matchLabels:
      app: client
  egress:
    - toEntities:
        - all
      toPorts:
        - ports:
          - port: "53"
            protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
      - matchPattern: "*.caseyc.net."
      - matchName: "www.akamai.com."
