client/cnp-client-allow-gw.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-client-to-gw
spec:
  endpointSelector:
    matchLabels:
      app: client
  egress:
    - toCIDR:
      - 192.168.0.1/32
      - 192.168.0.2/32
