client/knp-client-allow-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-to-apiserver
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: APISERVER/32
