client/knp-client-allow-node.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-to-nodes
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 172.25.0.0/24
        - ipBlock:
            cidr: fc00:c111::/64
